--- a/css.html
+++ b/css.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>WEB</h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
     <li><a href="index.html">WEB</a></li>
     <li><a href="html.html">HTML</a></li>
